Add restful poi api access utility. Refine episode curation saving with poi-utility.

--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -43,6 +43,7 @@
 <script src="javascripts/v3/domready.common.js?v=1278"></script>
 <script src="javascripts/v3/domready.curation.js?v=1278"></script>
 <script src="javascripts/v3/cms.youtube-utility.js"></script>
+<script src="javascripts/v3/cms.poi-utility.js"></script>
 <title>9x9.tv - Episode Curation - Curation</title>
 </head>
 <body class="scrollable">
