--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -859,7 +859,7 @@
                     <div id="btn-add-poll-item" class="btn-gray">
                         <p class="left"></p>
                         <p class="center">
-                            <a href="#" class="langkey">Add Button</a>
+                            <a href="#" class="langkey">${nn._([cms.global.PAGE_ID, 'poi-event', 'Add Button'])}</a>
                         </p>
                         <p class="right"></p>
                     </div>
