--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -16,7 +16,8 @@
 <link rel="stylesheet" href="stylesheetsv3/ep-curation.css?v=1278" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-<script src="http://9x9ui.s3.amazonaws.com/poi/jquery.poi.js?v=1278"></script>
+<!--<script src="http://9x9ui.s3.amazonaws.com/poi/jquery.poi.js?v=1278"></script>-->
+<script src="javascripts/libs/jquery.poi.js"></script>
 <script src="javascripts/libs/nn-sdk.js?v=1278"></script>
 <script src="javascripts/libs/respond.min.js"></script>
 <script src="javascripts/libs/jquery.mousewheel.min.js?v=1278"></script>
